--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,11 @@ target_include_directories(${PROJECT_NAME}
         "${PROJECT_SOURCE_DIR}/include"
 )
 
+target_link_libraries(${PROJECT_NAME}
+    PUBLIC
+        "-framework GSS"
+)
+
 if (GSSPP_BUILD_TESTS)
     add_subdirectory(tests)
 endif()
